argocd/aws/666628074417/clusters/cbioportal-prod/apps/cellxgene/cellxgene-msk-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: cellxgene
  name: cellxgene-deploy-1
  labels:
    app: cellxgene
    dataset: pbmc3k.h5ad
spec:
  replicas: 1
  selector:
    matchLabels:
      dataset: pbmc3k.h5ad
  template:
    metadata:
      labels:
        dataset: pbmc3k.h5ad
    spec:
      containers:
        - name: cellxgene-app
          image: 'edit01/cellxgene:1.2.0'
          command: ["cellxgene"]
          args: [
            "launch", 
            "-p", 
            "8080", 
            "--host", 
            "0.0.0.0", 
            "--backed", 
            "--disable-annotations", 
            "--disable-gene-sets-save", 
            "s3://jason-test-workspace/pbmc3k.h5ad"
          ]
          ports:
          - containerPort: 8080
            protocol: TCP
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 500Mi 
              cpu: 250m
          readinessProbe: # Block traffic to container if not ready
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 60 
            failureThreshold: 10
          livenessProbe: # Restart container if not healthy
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 600  # 10min
            periodSeconds: 3600 # 1hr
            failureThreshold: 2
      nodeSelector:
        workload: eks-cellxgene
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cellxgene"
          effect: "NoSchedule"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: cellxgene
  name: cellxgene-deploy-2
  labels:
    app: cellxgene
    dataset: msk_spectrum_all.h5ad
spec:
  replicas: 1
  selector:
    matchLabels:
      dataset: msk_spectrum_all.h5ad
  template:
    metadata:
      labels:
        dataset: msk_spectrum_all.h5ad
    spec:
      containers:
        - name: cellxgene-app2
          image: 'edit01/cellxgene:1.2.0'
          command: ["cellxgene"]
          args: [
            "launch",
            "-p",
            "8080",
            "--host",
            "0.0.0.0",
            "--backed",
            "--disable-annotations",
            "--disable-gene-sets-save",
            "s3://jason-test-workspace/spectrum_all_cells.h5ad"
          ]
          ports:
          - containerPort: 8080
            protocol: TCP
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: 7Gi
          #     cpu: 250m
          readinessProbe: # Block traffic to container if not ready
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 10
          livenessProbe: # Restart container if not healthy
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 600  # 10min
            periodSeconds: 3600 # 1hr
            failureThreshold: 2
      nodeSelector:
        workload: eks-cellxgene
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cellxgene"
          effect: "NoSchedule"
# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: cellxgene-deploy-3
#   labels:
#     app: cellxgene
#     dataset: gastric-wholecohort-regularUMAP-annotated-dec13.h5ad
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       dataset: gastric-wholecohort-regularUMAP-annotated-dec13.h5ad
#   template:
#     metadata:
#       labels:
#         dataset: gastric-wholecohort-regularUMAP-annotated-dec13.h5ad
#     spec:
#       containers:
#         - name: cellxgene-app3
#           image: 'edit01/cellxgene:1.2.0'
#           command: ["cellxgene"]
#           args: [
#             "launch",
#             "-p",
#             "8080",
#             "--host",
#             "0.0.0.0",
#             "--backed",
#             "--disable-annotations",
#             "--disable-gene-sets-save",
#             "s3://jason-test-workspace/gastric-wholecohort-regularUMAP-annotated-dec13.h5ad"
#           ]
#           ports:
#           - containerPort: 8080
#             protocol: TCP
#           imagePullPolicy: Always
#           # resources:
#           #   limits:
#           #     memory: 7Gi
#           #     cpu: 250m
#           readinessProbe: # Block traffic to container if not ready
#             httpGet:
#               path: /
#               port: 8080
#             initialDelaySeconds: 60
#             periodSeconds: 60
#             failureThreshold: 10
#           livenessProbe: # Restart container if not healthy
#             httpGet:
#               path: /health
#               port: 8080
#             initialDelaySeconds: 600  # 10min
#             periodSeconds: 3600 # 1hr
#             failureThreshold: 2
#           env:
#           - name: AWS_ACCESS_KEY_ID
#             valueFrom:
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_access_key_id
#           - name: AWS_SECRET_ACCESS_KEY
#             valueFrom:
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_secret_access_key
#       # run on big memory machine
#       nodeSelector:
#         eks.amazonaws.com/nodegroup: eks-cellxgene
#       tolerations:
#         - key: "dedicated"
#           operator: "Equal"
#           value: "eks-cellxgene"
#           effect: "NoSchedule"
# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: cellxgene-deploy-4
#   labels:
#     app: cellxgene
#     dataset: atlas_scvi_with_ct_umaps_reduced.h5ad
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       dataset: atlas_scvi_with_ct_umaps_reduced.h5ad
#   template:
#     metadata:
#       labels:
#         dataset: atlas_scvi_with_ct_umaps_reduced.h5ad
#     spec:
#       containers:
#         - name: cellxgene-app
#           image: 'edit01/cellxgene:1.2.0'
#           command: ["cellxgene"]
#           args: [
#             "launch", 
#             "-p", 
#             "8080", 
#             "--host", 
#             "0.0.0.0", 
#             "--backed", 
#             "--disable-annotations", 
#             "--disable-gene-sets-save", 
#             "s3://jason-test-workspace/atlas_scvi_with_ct_umaps_reduced.h5ad"
#           ]
#           ports:
#           - containerPort: 8080
#             protocol: TCP
#           imagePullPolicy: IfNotPresent
#           # resources:
#           #   limits:
#           #     memory: 500Mi 
#           #     cpu: 250m
#           readinessProbe: # Block traffic to container if not ready
#             httpGet:
#               path: /
#               port: 8080
#             initialDelaySeconds: 30
#             periodSeconds: 60 
#             failureThreshold: 10
#           livenessProbe: # Restart container if not healthy
#             httpGet:
#               path: /health
#               port: 8080
#             initialDelaySeconds: 600  # 10min
#             periodSeconds: 3600 # 1hr
#             failureThreshold: 2
#           env:
#           - name: AWS_ACCESS_KEY_ID
#             valueFrom: 
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_access_key_id
#           - name: AWS_SECRET_ACCESS_KEY
#             valueFrom: 
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_secret_access_key
#       # run on big memory machine
#       nodeSelector:
#         eks.amazonaws.com/nodegroup: eks-cellxgene
#       tolerations:
#         - key: "dedicated"
#           operator: "Equal"
#           value: "eks-cellxgene"
#           effect: "NoSchedule"
# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: cellxgene-deploy-5
#   labels:
#     app: cellxgene
#     dataset: AML_2025-03-20_V3.h5ad
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       dataset: AML_2025-03-20_V3.h5ad
#   template:
#     metadata:
#       labels:
#         dataset: AML_2025-03-20_V3.h5ad
#     spec:
#       containers:
#         - name: cellxgene-app
#           image: 'edit01/cellxgene:1.2.0'
#           command: ["cellxgene"]
#           args: [
#             "launch", 
#             "-p", 
#             "8080", 
#             "--host", 
#             "0.0.0.0", 
#             "--backed", 
#             "--disable-annotations", 
#             "--disable-gene-sets-save", 
#             "s3://jason-test-workspace/AML_2025-03-20_V3.h5ad"
#           ]
#           ports:
#           - containerPort: 8080
#             protocol: TCP
#           imagePullPolicy: IfNotPresent
#           # resources:
#           #   limits:
#           #     memory: 500Mi 
#           #     cpu: 250m
#           readinessProbe: # Block traffic to container if not ready
#             httpGet:
#               path: /
#               port: 8080
#             initialDelaySeconds: 30
#             periodSeconds: 60 
#             failureThreshold: 10
#           livenessProbe: # Restart container if not healthy
#             httpGet:
#               path: /health
#               port: 8080
#             initialDelaySeconds: 600  # 10min
#             periodSeconds: 3600 # 1hr
#             failureThreshold: 2
#           env:
#           - name: AWS_ACCESS_KEY_ID
#             valueFrom: 
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_access_key_id
#           - name: AWS_SECRET_ACCESS_KEY
#             valueFrom: 
#               secretKeyRef:
#                 name: cellxgene-creds
#                 key: aws_secret_access_key
#       # run on big memory machine
#       nodeSelector:
#         eks.amazonaws.com/nodegroup: eks-cellxgene
#       tolerations:
#         - key: "dedicated"
#           operator: "Equal"
#           value: "eks-cellxgene"
#           effect: "NoSchedule"
# 
---
kind: Service
apiVersion: v1
metadata:
  name: cellxgene-service-1
  labels: 
    app: cellxgene
    dataset: pbmc3k.h5ad
spec:
  selector:
    dataset: pbmc3k.h5ad
  ports:
    - port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: cellxgene-service-2
  labels: 
    app: cellxgene
    dataset: msk_spectrum_all.h5ad
spec:
  selector:
    dataset: msk_spectrum_all.h5ad
  ports:
    - port: 8080
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: cellxgene-service-3
#   labels: 
#     app: cellxgene
#     dataset: gastric-wholecohort-regularUMAP-annotated-dec13.h5ad
# spec:
#   selector:
#     dataset: gastric-wholecohort-regularUMAP-annotated-dec13.h5ad
#   ports:
#     - port: 8080
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: cellxgene-service-4
#   labels: 
#     app: cellxgene
#     dataset: atlas_scvi_with_ct_umaps_reduced.h5ad
# spec:
#   selector:
#     dataset: atlas_scvi_with_ct_umaps_reduced.h5ad
#   ports:
#     - port: 8080
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: cellxgene-service-5
#   labels: 
#     app: cellxgene
#     dataset: AML_2025-03-20_V3.h5ad
# spec:
#   selector:
#     dataset: AML_2025-03-20_V3.h5ad
#   ports:
#     - port: 8080
